# FusionRec

./: .gitignore  README.md  _my_notes.txt  _my_poc.py  _my_poc_2.py  _my_poc_3.py  _my_test.py  pyproject.toml  requirements.txt
src/: main.py
src/configs/: mg.yaml  overall.yaml
src/models/: bm3.py  lightgcn.py
src/utils/: dataloader.py  quick_start.py
